(refactor) payee to payer
